# outertube

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: search.rs
src/: client.rs  config.rs  error.rs  lib.rs  util.rs
src/api/: mod.rs  search.rs
src/api/endpoints/: mod.rs  search.rs
