[package]
name = "innertube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["rustls", "tokio-rustls", "json", "gzip", "deflate"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0.40"
tokio = "1.28"
tracing = "0.1.37"

[dev-dependencies]
convert_case = "*"
tokio = { version = "1.28", features = ["macros"]}