[package]
name = "outertube"
version = "0.1.0"
edition = "2021"
description = "YouTube's InnerTube API reverse-engineered in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["rustls", "tokio-rustls", "json", "gzip", "deflate"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0.40"
# tokio = "1.28"
tracing = "0.1.37"
urlencoding = "2.1.2"
[dev-dependencies]
anyhow = "1"
tokio-test = "0.4.2"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"]}
